Fix spacing inconsistency

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -80,7 +80,7 @@
     display: block;
     width: auto;
     height: auto;
-    margin-bottom: 1rem;
+    margin-bottom: 25px;
   }
 }
 
